  $Revision$
  $LastChangedBy$
  $Date$
  **************************************************/

Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-07-08 [A] Started i18n of plugin {GauGau}
2010-06-10 [O] Further improved speaking URLs for albums {Timo}
2010-06-09 [B] Fixed search bug {Timo}
2010-06-09 [B] Fixed display bug for favpics album {Timo}
2010-06-09 [A] Added speaking URLs functionality for thumbnail pages and user profiles {Timo}
2010-06-07 [B] Fixed keyword search URLs {Timo}
2010-06-05 [C] Removed multiple underscores {Timo}
2010-06-05 [A] Nicer german umlauts in URL {Timo}
2010-06-05 [O] Improved performance replacing preg_replace by str_replace where possible) {Timo}
2010-06-05 [A] Added support for italian transliteration {Timo}
2010-06-05 [A] Added speaking URLs functionality, showing pic title or filename in URL {Timo}
2010-02-03 [M] Increased version number to 1.8 {Timo}
2010-02-03 [A] Added experimental localisation support for french and spanish {Timo}
2010-02-03 [M] Increased version number to 1.7 {Timo}
2010-02-03 [O] Removed sort string from german htaccess (not used) {Timo}
2010-02-03 [O] Removed slideshow rules - not relevant for search engines {Timo}
2010-02-02 [A] Added known issues text file {Timo}
2010-02-02 [A] Added localisation support for german language {Timo}
2010-02-02 [B] Fixed a lot of URLs {Timo}
2010-02-02 [M] Increased version number to 1.6 {Timo}
2010-02-01 [M] Increased version number to 1.5 {Timo}
2010-02-01 [A] index.php?cat=0 is now replaced by index.html {Timo}
2010-01-06 [M] Increased version number to 1.3 {Timo}
2010-01-06 [D] Added changelog file {Timo}
2010-01-06 [B] Plugin wasn't working (one & too much in sef_urls_convert) {Timo}